Added allot of functionalities to the site in some couple of days which include profiles, feed and much more

--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -20,7 +20,8 @@
     {% endblock content %}
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="{js/bootstrap.bundle.min.js}"></script> -->
+    <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
 
   </body>
 </html>
