--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -1,8 +1,17 @@
 <div class="container">
-<nav class="navbar navbar-expand-lg navbar-light >
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'index' %}">Socialize</a>
-    <div class="collapse navbar-collapse" id="bavbarTogglerDemo3">
+    <button class="navbar-toggler" type="button" name="button" date-bs-toggle="collapse">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand"
+    {% if user.is_authenticated %}
+        href="{% url 'post_list'%}"
+    {% else %}
+      href="{% url 'index' %}"
+    {% endif %}
+    ><i class="fas fa-comment"></i>Socialize</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
       <form class="d-flex">
@@ -15,13 +24,13 @@
           <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" role="button" aria-expanded="false"><i class="fas fa-user"></i></a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'profile' user.profile.pk %}">Profile</a></li>
               <li><a class="dropdown-item" href="{% url 'account_logout'%}">Logout</a></li>
             </ul>
           </div>
       {% endif %}
 
-    </div>
+     </div>
     </div>
 </nav>
 </div>
