--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="{% static 'style/styles.css' %}">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{%static 'css/bootstrap.min.css'%}">
-
 
     <script src="https://kit.fontawesome.com/c3b2df9771.js" crossorigin="anonymous"></script>
     <title>Social Network</title>
@@ -19,9 +20,8 @@
 
     {% endblock content %}
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
     <!-- <script src="{js/bootstrap.bundle.min.js}"></script> -->
-    <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
-
+    <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
   </body>
 </html>
