--- a/social/templates/social/comment_delete.html
+++ b/social/templates/social/comment_delete.html
@@ -4,7 +4,7 @@
   <div class="container">
       <div class="row mt-5">
         <div class="col-md-5 col-sm-6">
-          <a href="{% url 'post_detail' object.pk %}" class="btn btn-light">Undo</a>
+          <a href="{% url 'post_detail' object.post.pk %}" class="btn btn-light">Undo</a>
         </div>
       </div>
     <div class="row justify-content-center mt-3 mb-5">
