--- a/social/templates/social/post_detail.html
+++ b/social/templates/social/post_detail.html
@@ -1,6 +1,6 @@
 {% extends "landing/base.html" %}
 {% load crispy_forms_tags %}
-
+{% load static %}
 {% block content %}
 <div class="container">
   <div class="row mt-5">
@@ -11,56 +11,158 @@
 
   <div class="row justify-content-center mt-3">
     <div class="col-md-5 col-sm-12 border-bottom">
-      {% if post.author.profile.name %}
-          <h5>{{post.author.profile.name}}</h5>
-        {% else %}
-        <h5>{{post.author}}</h5>
-      {% endif %}
-      <p><a class="text-primary" style="text-decoration:none;" href="{% url 'profile' post.author.profile.pk %}">@{{post.author}}</a></p>
+      <div class="">
+        <a href="{% url 'profile' post.author.profile.pk %}" class="remove-link">
+        <img src="{{ post.author.profile.profile_picture.url }}" class="round-circle post-img" width="30" height="30">
+        </a>
+        {% if post.author.profile.name %}
+            <h5>{{post.author.profile.name}}</h5>
+          {% else %}
+          <h5>{{post.author}}</h5>
+        {% endif %}
+        <p class="post-text">
+          <a class="text-primary remove-link" href="{% url 'profile' post.author.pk %}">@{{post.author}}</a>
+        </p>
+      </div>
       <small>{{post.created_on}}</small>
-      <p>{{post.body}}</p>
-      {% if request.user == post.author %}
-      <a href="{% url 'post_edit'  post.pk %}" style="color: #333;"><i class="far fa-edit"></i>.</a>
-      <a href="{% url 'post_delete'  post.pk%} " style="color: #333;"><i class="fas fa-trash">.</i></a>
-
+      <div class="body">
+        <p>{{post.body}}</p>
+      </div>
+      {% if post.image.count > 0 %}
+        <div class="row">
+          {% for img in post.image.all %}
+            <div class="col-md-6 col-xs-12">
+              <img src="{{ img.image.url }}" class="post-image">
+            </div>
+          {% endfor %}
+        </div>
+      {% else %}
+          <img src="{{ post.image.url }}" class="post-image">
       {% endif %}
+      {% if request.user == post.author %}
+      <a href="{% url 'post_edit'  post.pk %}" class="edit-color"><i class="far fa-edit"></i>.</a>
+      <a href="{% url 'post_delete'  post.pk%}" class="edit-color"><i class="fas fa-trash">.</i></a>
+      {% endif %}
+      <div class="d-flex flex-Row">
+        <form action="{% url 'add_like' post.pk%}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="next" value="{{ request.path}}">
+          <button class="remove-default-btn" type="submit">
+          <i class="far fa-thumbs-up"><span>{{ post.likes.all.count }}</span></i>
+        </button>
+        </form>
 
-    </div>
-  </div>
-  <div class="container">
-    <div class="row justify-content-center mt-3">
-      <div class="col-md-5 col-sm-12 border-bottom">
-        <h5>Add Comment</h5>
+        <form action="{% url 'dislike' post.pk%}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="next" value="{{ request.path}}">
+          <button class="remove-default-btn" type="submit">
+          <i class="far fa-thumbs-down"><span>{{ post.dislikes.all.count }}</span></i>
+        </button>
+        </form>
       </div>
     </div>
-  <div class="row justify-content-center mt-3 mb-5">
-    <div class="col-md-5 col-sm-12">
-      <form method="POST">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <div class="d-grid gap-2">
-          <button class="btn btn-success mt-3"  name="button">Add Comment</button>
+  </div>
+  <hr>
+
+  <h4 class="justify-content-center mt-2"><i>comments</i></h4>
+
+{% for comment in comment %}
+{% if comment.is_parent %}
+<div class="container">
+    <div class="row justify-content-center mt-3 mb-5">
+      <div class="col-md-5 col-sm-12 border-bottom">
+        {% if comment.author.profile.name %}
+            <h5>{{comment.author.profile.name}}</h5>
+          {% else %}
+          <h5>{{comment.author}}</h5>
+        {% endif %}
+        <div>
+          <a href="{% url 'profile' comment.author.profile.pk %}" class="remove-link">
+          <img src="{{ comment.author.profile.profile_picture.url }}" class="round-circle post-img" width="30" height="30">
+          </a>
+          <p class="post-text">
+            <a class="text-primary remove-link" href="{% url 'profile' comment.author.pk %}">@{{comment.author}}</a>
+          </p>
         </div>
-      </form>
+        <p><small>{{comment.created_on}}</small></p>
+        {% if request.user == comment.author %}
+        <a href="{% url 'comment_delete' comment.post.pk comment.pk %}" class="edit-color"><i class="fas fa-trash"></i>.</a>
+        {% endif %}
+        <div class="body">
+          <p>{{ comment.comment }}</p>
+        </div>
+          <div class="d-flex flex-Row">
+            <form method="POST" action="{% url 'comment_likes' post.pk comment.pk %}" >
+              {% csrf_token %}
+              <input type="hidden" name="next" value="{{ request.path}}">
+              <button class="remove-default-btn" type="submit">
+              <i class="far fa-thumbs-up"><span>{{ comment.likes.all.count }}</span></i>
+            </button>
+            </form>
+
+            <form action="{% url 'comment_dislikes' post.pk comment.pk %}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="next" value="{{ request.path}}">
+              <button class="remove-default-btn" type="submit">
+              <i class="far fa-thumbs-down"><span>{{ comment.dislikes.all.count }}</span></i>
+            </button>
+            </form>
+            <div>
+              <button class="remove-default-btn" onclick="commentReplyToggle('{{ comment.pk }}')" ><i class="far fa-comment-dots">reply</i></button>
+            </div>
+            </div>
+          <hr>
+      </div>
+      <div class="row justify-content-center mt-3 mb-5 d-none"  id="{{comment.pk}}">
+        <div class="col-md-5 col-sm-12">
+          <form method="POST" action="{% url 'comment_reply' post.pk comment.pk %}">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <div class="d-grid gap-2">
+              <button class="btn btn-success mt-3">reply comment</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      {% for child_comment in comment.children %}
+      <div class="row justify-content-center mt-3 " style="margin-left: 3rem;">
+        <div class="col-md-5 col-sm-12 border-bottom">
+          <div>
+            <a href="{% url 'profile' child_comment.author.profile.pk %}" class="remove-link">
+            <img src="{{ child_comment.author.profile.profile_picture.url }}" class="round-circle post-img" width="30" height="30">
+            </a>
+            <p class="post-text">
+              <a class="text-primary remove-link" href="{% url 'profile' child_comment.author.pk %}">@{{child_comment.author}}</a>
+            </p>
+          </div>
+          <p><small>{{child_comment.created_on}}</small></p>
+          {% if request.user == comment.author or request.user == child_comment.author %}
+          <a href="{% url 'comment_delete' comment.post.pk child_comment.pk %}" class="edit-color"><i class="fas fa-trash"></i>.</a>
+          {% endif %}
+          <p>{{ child_comment.comment }}</p>
+          {% endfor %}
+        </div>
+      </div>
+  </div>
+  </div>
+  {% endif %}
+{% endfor %}
+      <div class="container">
+        <div class="row justify-content-center mt-3">
+          <div class="col-md-5 col-sm-12 border-bottom">
+            <h5>Add Comment</h5>
+          </div>
+        </div>
+      <div class="row justify-content-center mt-3 mb-5 ">
+        <div class="col-md-5 col-sm-12">
+          <form method="POST">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <div class="d-grid gap-2">
+              <button class="btn btn-success mt-3"  name="button">Add Comment</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-      {% for comment in comments %}
-<div class="row justify-content-center mt-3 mb-5">
-  <div class="col-md-5 col-sm-12 border-bottom">
-    {% if comment.author.profile.name %}
-        <h5>{{comment.author.profile.name}}</h5>
-      {% else %}
-      <h5>{{comment.author}}</h5>
-    {% endif %}
-    <p><a class="text-primary" style="text-decoration:none;" href="{% url 'profile' comment.author.profile.pk %}">@{{comment.author}}</a></p>
-    <p><small>{{comment.created_on}}</small></p>
-    <p>{{comment.comment}}</p>
-    {% if request.user == comment.author %}
-    <a href="{% url 'comment_delete' post.pk comment.pk%} " style="color: #333;"><i class="fas fa-trash"></i>.</a>
-    {% endif %}
-      <hr>
-  </div>
-</div>
-      {% endfor %}
 {% endblock content %}
