--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -1,6 +1,4 @@
 {% extends "landing/base.html" %}
-{% load crispy_forms_tags %}
-
 {% block content %}
   <div class="container">
     <div class="row mt-5">
@@ -41,24 +39,84 @@
         {% endif %}
 
         {% if profile.location %}
-            <h4  class="py-4">{{ profile.location }}</h4>
+            <h4  class="py-4">Location: {{ profile.location }}</h4>
         {% endif %}
-        <div class="ml-3 mr-10 ">
-        {% if profile.birth_date %}
-            <h4  class="py-4">{{ profile.birth_date }}</h4>
-        {% endif %}
-        </div>
 
+        {% if profile.birth_date %}
+            <h4  class="py-4">DOB: {{ profile.birth_date }}</h4>
+        {% endif %}
+
+        <div class="mb-3">
+          <p>{{ numfollowers }} <a href="{% url 'follower_list' profile.pk %}" class="remove-link">Followers</a></p>
+{% block follow %}
+          {% if user == request.user %}
+          {% else %}
+              {% if is_following %}
+                  <form action="{% url 'unfollow' profile.pk %}" method="POST">
+                    {% csrf_token %}
+                    <button class="btn btn-outline-success" type="submit">Unfollow</button>
+                  </form>
+                {% else %}
+                <form action="{% url 'follow' profile.pk %}" method="POST">
+                  {% csrf_token %}
+                  <button type="submit" class="btn btn-outline-success">Follow</button>
+                </form>
+              {% endif %}
+          {% endif %}
+        </div>
+{% endblock follow %}
       </div>
     </div>
       {% for post in posts %}
     <div class="row justify-content-center mt-5">
       <div class="col-md-8 col-sm-12 border-bottom position-relative">
-        <p><a class="text-primary" style="text-decoration:none;" href="{% url 'profile' post.author.profile.pk %}">@{{post.author}}</a></p>
+        <div class="">
+          <a href="{% url 'profile' post.author.profile.pk %}" class="remove-link">
+          <img src="{{ post.author.profile.profile_picture.url }}" class="round-circle post-img" width="30" height="30">
+          </a>
+          {% if post.author.profile.name %}
+              <h5>{{post.author.profile.name}}</h5>
+            {% else %}
+            <h5>{{post.author}}</h5>
+          {% endif %}
+          <p class="post-text">
+            <a class="text-primary remove-link" href="{% url 'profile' post.author.pk %}">@{{post.author}}</a>
+          </p>
+        </div>
         <small>{{post.created_on}}</small>
         <div class="position-relative">
-          <p>{{post.body}}</p>
+          <div class="body">
+            <p>{{post.body}}</p>
+          </div>
+          {% if post.image.count > 0 %}
+            <div class="row">
+              {% for img in post.image.all %}
+                <div class="col-md-4 col-xs-12">
+                  <img src="{{ img.image.url }}" class="post-image">
+                </div>
+              {% endfor %}
+            </div>
+          {% else %}
+              <img src="{{ post.image.url }}" class="post-image">
+          {% endif %}
           <a href="{% url 'post_detail' post.pk %}" class="stretched-link"></a>
+        </div>
+        <div class="d-flex flex-Row">
+          <form action="{% url 'add_like' post.pk %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="next" value="{{ request.path}}">
+            <button style="background-color:transparent;border:none;box-shadow:none" type="submit">
+            <i class="far fa-thumbs-up"><span>{{ post.likes.all.count }}</span></i>
+          </button>
+          </form>
+
+          <form action="{% url 'dislike' post.pk%}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="next" value="{{ request.path}}">
+            <button style="background-color:transparent;border:none;box-shadow:none" type="submit">
+            <i class="far fa-thumbs-down"><span>{{ post.dislikes.all.count }}</span></i>
+          </button>
+          </form>
         </div>
       </div>
     </div>
