--- a/social/templates/social/post_detail.html
+++ b/social/templates/social/post_detail.html
@@ -119,7 +119,7 @@
             {% csrf_token %}
             {{ form | crispy }}
             <div class="d-grid gap-2">
-              <button class="btn btn-success mt-3">reply comment</button>
+              <button class="btn btn-success mt-3">Reply Comment</button>
             </div>
           </form>
         </div>
