debug errors, wrote test and fixed shouting bugs

--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -1,4 +1,5 @@
 {% extends 'landing/base.html' %}
+{% block head %} InOrg| Welcome {% endblock head %}
 {% block content %}
 <div class="container">
   <div class="row justify-content-center mt-5">
