--- a/social/templates/social/thread.html
+++ b/social/templates/social/thread.html
@@ -1,5 +1,6 @@
 {% extends "landing/base.html" %}
 {% load crispy_forms_tags %}
+{% block head%} InOrg| conversation with @{{thread.receiver}} {% endblock head%}
 {% block content %}
 <div class="container">
   <div class="row">
