--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -5,23 +5,22 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="inorg, inside organization, defideh, org website">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'style/styles.css' %}">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{%static 'css/bootstrap.min.css'%}">
-
     <script src="https://kit.fontawesome.com/c3b2df9771.js" crossorigin="anonymous"></script>
-    <title>Social Network</title>
+    <title>{% block head%} InOrg home {% endblock head%}</title>
   </head>
   <body>
     {% include "landing/nav.html" %}
     {% block content %}
 
     {% endblock content %}
-
-    <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
-    <!-- <script src="{js/bootstrap.bundle.min.js}"></script> -->
-    <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
+    <link rel="script" href="{% static 'js/scripts.js'%}">
   </body>
 </html>
