--- a/social/templates/social/explore.html
+++ b/social/templates/social/explore.html
@@ -1,5 +1,6 @@
 {% extends "landing/base.html" %}
 {% load crispy_forms_tags %}
+{% block head%} InOrg| Explore {% endblock head%}
 {% block content %}
   <div class="container">
     <div class="row">
