--- a/social/templates/social/post_list.html
+++ b/social/templates/social/post_list.html
@@ -14,7 +14,7 @@
           {% csrf_token %}
           {{ form | crispy }}
           <div class="d-grid gap-2">
-            <button class="btn btn-success mt-3"  name="button">Post</button>
+            <button class="btn btn-outline-primary mt-3"  name="button">Post</button>
           </div>
         </form>
       </div>
