--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -1,4 +1,5 @@
 {% extends "landing/base.html" %}
+{% block head%} InOrg| {{profile.name}} profile {% endblock head%}
 {% block content %}
   <div class="container">
     <div class="row mt-5">
@@ -67,9 +68,10 @@
 {% endblock follow %}
       </div>
     </div>
+    {% comment %} <div class="row justify-content-center mt-5"> {% endcomment %}
       {% for post in posts %}
-    <div class="row justify-content-center mt-5">
-      <div class="col-md-8 col-sm-12 border-bottom position-relative">
+      <div class="row justify-content-center mt-5">
+      <div class="border-bottom position-relative">
         <div class="">
           <a href="{% url 'profile' post.author.profile.pk %}" class="remove-link">
           <img src="{{ post.author.profile.profile_picture.url }}" class="round-circle post-img" width="30" height="30">
