fixed bugs in accounts

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,5 +1,5 @@
 {% extends "account/base.html" %}
-
+{% block head %}inorg| signin{% endblock head %}
 {% load i18n %}
 {% load account socialaccount %}
 
