--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -1,7 +1,7 @@
 .remove-default-btn {
   border:none;
   background-color:transparent;
-  box-shadow:none;"
+  box-shadow:none;
 }
 .edit-color {
   color: #333;
@@ -41,7 +41,7 @@
   display: inline-block;
 }
 .dropdown-content {
-  position;
+  position: absolute;
   background-color: #f1f1f1;
   min-width: 350px;
   box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
