--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,5 @@
 {% extends "account/base.html" %}
-
+{% block head %}inorg| signup{% endblock head %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
